--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
         </div>
 <div class="item">
           <p style="color: red;">{{error | safe}}</p>
+  <p>INFO: The app may return a 502 error on its first run (due to limited memory provided by the hosting platform). In such a case, close the browser tab and rerun the app.</p>  
 </div>
       </form>
     </div>
