--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </div>
 <div class="item">
           <p style="color: red;">{{error | safe}}</p>
-  <p>INFO: The app may return a 502 error (due to limited memory provided by the hosting platform). In such a case, close the browser tab and rerun the app.</p>  
+  <p>INFO: The app may return a 502 error (due to resource constraints imposed by the hosting platform for its free plan). In such a case, close the browser tab (or browser, if that doesn't work) and rerun the app.</p>  
 </div>
       </form>
     </div>
