--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </div>
 <div class="item">
           <p style="color: red;">{{error | safe}}</p>
-  <p>INFO: The app may return a 502 error (due to resource constraints imposed by the hosting platform for its free plan). In such a case, close the browser tab (or browser, if that doesn't work) and rerun the app.</p>  
+  <p>INFO: The app and API go into a sleep mode after 15 mins of inactivity (as they are deployed to a free platform). Hence, the app may take a significant amount of time to process the first request.</p>  
 </div>
       </form>
     </div>
